# Spherogram

./: .gitignore  .hgignore  MANIFEST.in  README  README.rst  appveyor.yml  build_planarity.sh  pyproject.toml  setup.py  test  version.txt
.github/workflows/: build.yml  lint.yml  test.yml
Duluth_Link_Double_Br_Cover/: double_br_cover.ipynb
Duluth_Link_Double_Br_Cover/Link_Examples/: 5_2.lnk  5_2annularclosure.lnk  Our Test Tangle.py  fig8cover.lnk
Lustig--Moriah/: Fox Derivatives.ipynb  Untitled.ipynb
dev/: DTcodes  DTcodes.py  conventions.py  dt_issue.py  dt_tests.py  hard_links.py  issue_35.py  link.py  link_exterior.py  montesinos_knots  other_link_formats.py  plot.py  run_doctests  sage_graph.py  sage_link_compare.py  seifert_patch.py  signature.py  tangle_patch.py  tangle_test.py  tangles.py  test.py
dev/bridge/: bridge.py
dev/dev_jennet/: AlexanderKauffman.py  Jones_poly.py  __init__.py  braid_functions.py  bridge_finding.py  spanning_trees.py  test_links.py  torus.py  tree_functions.py
dev/dev_malik/: fast_jones_patch.py  random_knot.py  unknotting_number.py
dev/draw/: Makefile  inputfile  trefoil.py
dev/fastalex/: __init__.py  exhaust.py  knot_widths.csv
dev/new_morse/: exhaust.py  new_jones.py
dev/old/: braidclosure.py  mirror.py  seifert_patch.py
dev/orthogonal/: bridge.py  hobby.py  orthogonal.py  smooth.py
doc_source/: doc.tex
doc_src/: doc.tex
planarity_src/: build_planarity.sh  fetch_planarity.sh  planarity.c  planarity.patch  planarity.pyx
planarmap_src/: planarmap.c  planarmap.pyx
spherogram/: __init__.py  graphs.py  presentations.py
spherogram_src/: __init__.py  graphs.py  presentations.py  sage_helper.py  test.py  test_helper.py  version.py
(+101 files in other folders)
